--- a/pasha html:css/task3/task3.4/index.html
+++ b/pasha html:css/task3/task3.4/index.html
@@ -11,7 +11,7 @@
     <table>
         <caption>Задание 4</caption>
         <tr>
-            <td colspan="4">1</td>
+            <td colspan="4"></td>
         </tr>
         <tr>
             <td rowspan="2" class="left"></td>
